--- a/package.json
+++ b/package.json
@@ -6,7 +6,23 @@
     "viewer",
     "pdf",
     "cordova",
-    "plugin"
+    "plugin",
+    "ecosystem:cordova",
+    "cordova-android",
+    "cordova-ios"
   ],
-  "version": "1.0.0"
+  "version": "0.0.1",
+  "description": "cordova native pdf viewer for iOS/Android",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/InsidiousClu/cordova-pdf-viewer.git"
+  },
+  "author": "Mikita Shchyhelski",
+  "bugs": {
+    "url": "https://github.com/InsidiousClu/cordova-pdf-viewer/issues"
+  },
+  "homepage": "https://github.com/InsidiousClu/cordova-pdf-viewer#readme"
 }
